# miio-light-switch

./: Cargo.toml  README.md  sdkconfig.defaults  spec.json
com.youxam.smsw/: README.md  index.js  package.json  project.json
com.youxam.smsw/bluetooth/: bluetooth.js
com.youxam.smsw/modules/: consts.js  navigator.js
com.youxam.smsw/views/: app.js
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1733563566401-7356b583144fb.mjs
frontend/src/components/: Login.tsx
scripts/: flash.sh
src/: ap.rs  main.rs  miio.rs  serial.rs
src/net/: mod.rs  provisioning.rs
src/nvs/: mod.rs
src/parser/: lang.pest  mod.rs
